cmake_minimum_required(VERSION 3.28)
include(CheckIncludeFiles)
include(CheckTypeSize)
project(dietools)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set (CMAKE_CXX_STANDARD 17)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wno-strict-overflow -Wno-unused-parameter")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-strict-overflow -Wno-unused-parameter")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

# Checks currently do nothing, but are helpful for me in the future.
CHECK_INCLUDE_FILES(fcntl.h HAVE_FCNTL_H)
CHECK_INCLUDE_FILES(unistd.h HAVE_UNISTD_H)
CHECK_INCLUDE_FILES(sys/time.h HAVE_SYS_TIME_H)
CHECK_INCLUDE_FILES(sys/types.h HAVE_SYS_TYPES_H)
CHECK_INCLUDE_FILES(sys/stat.h HAVE_SYS_STAT_H)
CHECK_INCLUDE_FILES(sys/mman.h HAVE_SYS_MMAN_H)
CHECK_TYPE_SIZE(long SIZEOF_LONG)

# On Windows, should we use InstallRequiredSystemLibraries to prevent DLL Hell?
# libgcc and libstdc++ will also be required.
find_package(Freetype REQUIRED)
include_directories(${FREETYPE_INCLUDE_DIRS})
find_package(Fontconfig REQUIRED)
include_directories(${FONTCONFIG_INCLUDE_DIR})
find_package(Lua REQUIRED)
include_directories(${LUA_INCLUDE_DIR})
find_package(ZLIB REQUIRED)
include_directories(${ZLIB_INCLUDE_DIRS})
find_package(Qt5 COMPONENTS Gui Widgets REQUIRED)

include_directories("${PROJECT_SOURCE_DIR}/libdie")
add_subdirectory(generate-bitmask-images)
add_subdirectory(generate-circuit)
add_subdirectory(libdie)
add_subdirectory(logx)
add_subdirectory(mschem)
add_subdirectory(mview)
add_subdirectory(sview)
